tests/typing/bad/testfile-return-5.scala

class A { def m() : Int = { return true } }
object Main { def main(args: Array[String]) { } }
